<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".AddItemActivity">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/hundred50dp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/computer_world_logo" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingHorizontal="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/itemNameET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:ems="10"
            android:inputType="text"
            android:hint="@string/item_name"

            android:textColor="@color/black"
            android:textColorHint="@color/dark_gray" />

        <EditText
            android:id="@+id/descET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:ems="10"
            android:inputType="text"
            android:hint="@string/item_description"

            android:textColor="@color/black"
            android:textColorHint="@color/dark_gray" />

        <EditText
            android:id="@+id/priceET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:ems="10"
            android:inputType="number"
            android:hint="@string/item_price"

            android:textColor="@color/black"
            android:textColorHint="@color/dark_gray" />

        <EditText
            android:id="@+id/imageURLET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:ems="10"
            android:inputType="text"
            android:hint="Image URL"

            android:textColor="@color/black"
            android:textColorHint="@color/dark_gray" />

        <Button
            android:id="@+id/addButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/RegisterColor"
            app:cornerRadius="8sp"
            android:text="@string/add_item"
            android:textColor="@color/black"/>
    </LinearLayout>

    <Button
        android:id="@+id/backbutton2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:backgroundTint="@color/pale_white"
        android:padding="@dimen/pad_small"
        android:text="@string/Back"
        android:textColor="@color/black"
        app:cornerRadius="8sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

</androidx.constraintlayout.widget.ConstraintLayout>