<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:padding="@dimen/pad_normal"
    tools:context=".LoginActivity">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/pale_white"
        android:elevation="@dimen/margin_2xl"
        app:cardCornerRadius="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:orientation="vertical"
            android:padding="20dp">

            <EditText
                android:id="@+id/email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="20"
                android:gravity="center"
                android:hint="@string/email"
                android:importantForAutofill="no"
                android:inputType="text"
                android:minHeight="48dp"
                android:textColor="@color/black"
                android:textColorHint="@color/dark_gray"
                tools:ignore="TextFields" />

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="20"
                android:gravity="center"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:minHeight="48dp"
                android:textColor="@color/black"
                android:textColorHint="@color/dark_gray"
                android:importantForAutofill="no" />

            <Button
                android:id="@+id/logButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:backgroundTint="@color/LoginColor"
                android:text="@string/login"
                android:textColor="@color/black"
                app:cornerRadius="8sp" />

            <Button
                android:id="@+id/regButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/register"
                android:textColor="@color/black"
                app:cornerRadius="8sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:backgroundTint="@color/RegisterColor"
                app:layout_constraintTop_toBottomOf="@+id/cardView2" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="@dimen/hundred50dp"
        android:scaleType="fitCenter"
        android:layout_height="@dimen/hundred50dp"
        app:layout_constraintBottom_toTopOf="@+id/cardView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:src="@drawable/cwgif_"
        android:contentDescription="@string/CW" />
<!--        app:srcCompat="@drawable/computer_world_logo"-->





</androidx.constraintlayout.widget.ConstraintLayout>